#265 - Add Checksum CRC-32, CR-32C, SHA-1, SHA-256 options